--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -6,4 +6,7 @@
 
 {% block main %}
 <h1>hola</h1>
+<p>hola mundo</p>
+<p>hola</p>
+<iframe src="https://www.1001juegos.com/embed/stickman-archero-fight" style="width: 100%; height: 100%;" frameborder="0" allow="gamepad *;"></iframe>
 {% endblock %}
