--- a/frontend/templates/layout.html
+++ b/frontend/templates/layout.html
@@ -59,5 +59,6 @@
       <li><a href="#"><i class='fa fa-user-circle'></i></a></li>
     </ul>
   </div>
+  {% block main %}{% endblock %}
 </body>
 </html>
