Agregando nueva home de UnsirifaGames

--- a/FrontEndMarv/templates/index.html
+++ b/FrontEndMarv/templates/index.html
@@ -11,31 +11,32 @@
     <div id="container">
         <header>
             <nav id="containerNav">
-                <div class="logoUser">
-                    <button>
-                        <img src="static\registrar.png" alt="">
-                    </button>
-                </div>
                 <input type="checkbox" id="check">
                 <label for="check" class="mostrar-nav">
                     &#8801
                 </label>
+                <div class="buscador">
+                    <button>
+                        <img src="static/iconoBuscar.png" alt="img">
+                    </button>
+                    <input type="text" name="Busqueda" value="" placeholder="Buscar Juego">
+                </div>
                 <div class="navbar">
                     <ul>
                         <li>
-                            <a href="templates\menuJuegos.html">Inicio</a>
+                            <a href="templates\menuJuegos.html">Estrategias</a>
                         </li>
         
                         <li>
-                            <a href="index.html">Perfil</a>
+                            <a href="index.html">Accion</a>
                         </li>
         
                         <li>
-                            <a href="index.html">Ajustes</a>
+                            <a href="index.html">Deportes</a>
                         </li>
                         
                         <li>
-                            <a href="index.html">Comunidad</a>
+                            <a href="index.html">Mesa</a>
                         </li>
 
                         <label for="check" class="esconder-nav">
@@ -43,6 +44,11 @@
                         </label>
 
                     </ul>
+                </div>
+                <div class="logoUser">
+                    <button>
+                        <img src="static\registrar.png" alt="">
+                    </button>
                 </div>
             </nav>
         </header>
