--- a/FrontEndMarv/static/style.css
+++ b/FrontEndMarv/static/style.css
@@ -37,9 +37,23 @@ body{
     width: 100%;
     height: 60px;
     padding-top: 15px;
+    padding-left: 20px;
+    padding-right: 10px;
     border-radius: 20px;
     background-color: rgb(175, 107, 238);
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.384);
+}
+
+#containerNav .buscador button img
+{
+    width: 10px;
+    height: auto;
+}
+
+#containerNav .buscador input
+{
+    width: 150px;
+    height: auto;
 }
 
 .navbar ul li{
@@ -63,7 +77,7 @@ body{
 .logoUser
 {
     position: relative;
-    left: 10px;
+    margin-left: 50%;
     margin: 0;
     width: 40px;
     height: auto;
@@ -136,7 +150,8 @@ body{
 
     .navbar ul li{
         display: block;
-        padding: 20px;
+        padding-top: 30px;
+        margin-left: 0%;
    }
 
    .navbar ul li a:hover{
@@ -153,6 +168,7 @@ body{
         right: 0;
    }
 }
+
 /*aasdsadasdsadasdasda*/
 
 #content{
