Casuales listo y funcional

--- a/proyecto_pendejo/templates/layout.html
+++ b/proyecto_pendejo/templates/layout.html
@@ -15,7 +15,7 @@
         <ul class="nav">
             <li><a href="/">Home</a></li>
             <li><a href="/accion">Acción</a></li>
-            <li><a href="#">Clásicos</a></li>
+            <li><a href="/casuales">Casuales</a></li>
             <li><a href="#">Mesa</a></li>
             <li><a href="#">Aventura</a></li>
         </ul>
