agregando juegos de terror

--- a/proyecto_pendejo/templates/layout.html
+++ b/proyecto_pendejo/templates/layout.html
@@ -16,7 +16,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/accion">Acción</a></li>
             <li><a href="/casuales">Casuales</a></li>
-            <li><a href="#">Mesa</a></li>
+            <li><a href="/terror">Terror</a></li>
             <li><a href="#">Aventura</a></li>
         </ul>
 
