Agregando el apartado de aventura y modificando el app.py

--- a/proyecto_pendejo/templates/layout.html
+++ b/proyecto_pendejo/templates/layout.html
@@ -17,7 +17,7 @@
             <li><a href="/accion">Acción</a></li>
             <li><a href="/casuales">Casuales</a></li>
             <li><a href="/terror">Terror</a></li>
-            <li><a href="#">Aventura</a></li>
+            <li><a href="/aventura">Aventura</a></li>
         </ul>
 
         <div class="action">
