agregando xo y dino en homepage

--- a/proyecto_pendejo/templates/index.html
+++ b/proyecto_pendejo/templates/index.html
@@ -38,24 +38,24 @@
 </div>
 
 <div class="games">
-    <h2>Juegos destacados</h2>
+    <h2>Juegos Nuestros</h2>
     <div class="card-box">
         <div class="card">
-            <img src="static/images/mc.png">
+            <img src="https://play-lh.googleusercontent.com/zPxLgj5nvl20ahJV7aFC6S5mD8kii5CEEDj25j1P9CYAfXL9sdDuO-8eES0r4DhJHrU=s48-rw" srcset="https://play-lh.googleusercontent.com/zPxLgj5nvl20ahJV7aFC6S5mD8kii5CEEDj25j1P9CYAfXL9sdDuO-8eES0r4DhJHrU=s96-rw 2x" class="T75of QhHVZd" aria-hidden="true" alt="Imagen de ícono" itemprop="image" data-iml="511.59999999403954" data-atf="true">
             <div class="content">
-                <h4>Minecraft</h4>
+                <h4>Tic Tac Toe</h4>
                 <div class="info">
-                    <a href="#">Jugar ahora</a>
+                    <a href="/tic-tac-toe">Jugar ahora</a>
                 </div>
             </div>
         </div>
 
         <div class="card">
-            <img src="static/images/mk.jpg">
+            <img src="https://play-lh.googleusercontent.com/i-0HlK6I-K5ZVI28HFa4iXz0T22Mg2WjQ4gMsEYvqmSNdifp2NE41ZiaUCavmbIimQ=w240-h480-rw" srcset="https://play-lh.googleusercontent.com/i-0HlK6I-K5ZVI28HFa4iXz0T22Mg2WjQ4gMsEYvqmSNdifp2NE41ZiaUCavmbIimQ=w480-h960-rw 2x" class="T75of cN0oRe fFmL2e" aria-hidden="true" alt="Imagen de icono" itemprop="image" data-iml="399.8999999985099" data-atf="false">
             <div class="content">
-                <h4>Mortal Kombat 5</h4>
+                <h4>Juego del Dinosaurio</h4>
                 <div class="info">
-                    <a href="#">Jugar ahora</a>
+                    <a href="/dinosaurio">Jugar ahora</a>
                 </div>
             </div>
         </div>
