--- a/proyecto_pendejo/templates/index.html
+++ b/proyecto_pendejo/templates/index.html
@@ -13,9 +13,9 @@
             <h2>¡Bienvenidos a UnsirifaGames!</h2>
             <p>
                 Disfruta de una colección de juegos súper divertidos
-                para personas de todas las edades. ¡A jugar!
+                para <br> personas de todas las edades. ¡A jugar!
             </p>
-            <a href="#" class="btn">Únete ahora</a>
+            <a href="#" id="btn-open-popup" class="btn-open-popup">Únete ahora</a>
         </div>
         <img src="static/images/malan.png">
     </div>
@@ -114,4 +114,3 @@
 </div>
 
 {% endblock %}
-
